CSCEXAM-777 Fix exam view long filename overflow (#668)
* Fix exam view long filename overflow

* Improve abortExam display

* Fix class typo

--- a/ui/src/app/assets/styles/partial/_dashboard.scss
+++ b/ui/src/app/assets/styles/partial/_dashboard.scss
@@ -2038,7 +2038,6 @@
   }
 
   .attachment-name {
-    display: inline-block;
     font-family: $sitnet-family-helvetica;
     font-size: 12px;
     color: #555555;
